--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -5,3 +5,4 @@ all:
       ansible_port: "{{ vault_server_port }}"
       ansible_user: "{{ vault_server_user }}"
       ansible_ssh_private_key_file: "{{ vault_ssh_key_path }}"
+      ansible_python_interpreter: /usr/bin/python3
