--- a/ansible/setup.yml
+++ b/ansible/setup.yml
@@ -1,6 +1,8 @@
 - hosts: ovh-server
   become: yes
   tasks:
+    ### DOCKER INSTALLATION ###
+
     - name: Check if Docker is installed
       command: docker --version
       register: docker_installed
@@ -38,3 +40,48 @@
         name: docker
         state: started
         enabled: yes
+
+    ### DOCKER NETWORK CONFIGURATION ###
+
+    - name: Create global-network
+      community.docker.docker_network:
+        name: global-network
+        driver: bridge
+        state: present
+
+    - name: Create jenkins-network
+      community.docker.docker_network:
+        name: jenkins-network
+        driver: bridge
+        state: present
+
+    - name: Create odyssai-network
+      community.docker.docker_network:
+        name: odyssai-network
+        driver: bridge
+        state: present
+
+    - name: Create llama-network
+      community.docker.docker_network:
+        name: llama-network
+        driver: bridge
+        state: present
+
+    - name: Check if mailcow network exists
+      command: docker network inspect mailcowdockerized_mailcow-network
+      register: mailcow_net
+      ignore_errors: yes
+      changed_when: false
+
+    - name: Create mailcow-network (only if Mailcow not yet installed)
+      community.docker.docker_network:
+        name: mailcow-network
+        driver: bridge
+        driver_options:
+          com.docker.network.bridge.name: br-mailcow
+        enable_ipv6: yes
+        ipam_config:
+          - subnet: "{{ vault_mailcow_ipv4_network | default('172.22.1.0/24') }}"
+          - subnet: "{{ vault_mailcow_ipv6_network | default('fd4d:6169:6c63:6f77::/64') }}"
+        state: present
+      when: mailcow_net.rc != 0
