--- a/ansible/setup.yml
+++ b/ansible/setup.yml
@@ -1,87 +1,5 @@
 - hosts: ovh-server
   become: yes
-  tasks:
-    ### DOCKER INSTALLATION ###
-
-    - name: Check if Docker is installed
-      command: docker --version
-      register: docker_installed
-      ignore_errors: yes
-      changed_when: false
-
-    - name: Check if Docker Compose is installed
-      command: docker compose version
-      register: docker_compose_installed
-      ignore_errors: yes
-      changed_when: false
-
-    # From : https://docs.docker.com/engine/install/debian/#install-using-the-convenience-script
-    - name: Download Docker install script (because Docker not installed)
-      get_url:
-        url: https://get.docker.com
-        dest: /tmp/get-docker.sh
-        mode: '0755'
-      when: docker_installed.rc != 0 or docker_compose_installed.rc != 0
-
-    - name: Run Docker install script (because Docker not installed)
-      command: sh /tmp/get-docker.sh
-      when: docker_installed.rc != 0 or docker_compose_installed.rc != 0
-
-    # From : https://docs.docker.com/engine/install/linux-postinstall/#manage-docker-as-a-non-root-user
-    - name: Add user to docker group (because we don't want sudo)
-      user:
-        name: "{{ ansible_user }}"
-        groups: docker
-        append: yes
-      when: docker_installed.rc != 0 or docker_compose_installed.rc != 0
-
-    - name: Ensure Docker is running
-      service:
-        name: docker
-        state: started
-        enabled: yes
-
-    ### DOCKER NETWORK CONFIGURATION ###
-
-    - name: Create global-network
-      community.docker.docker_network:
-        name: global-network
-        driver: bridge
-        state: present
-
-    - name: Create jenkins-network
-      community.docker.docker_network:
-        name: jenkins-network
-        driver: bridge
-        state: present
-
-    - name: Create odyssai-network
-      community.docker.docker_network:
-        name: odyssai-network
-        driver: bridge
-        state: present
-
-    - name: Create llama-network
-      community.docker.docker_network:
-        name: llama-network
-        driver: bridge
-        state: present
-
-    - name: Check if mailcow network exists
-      command: docker network inspect mailcowdockerized_mailcow-network
-      register: mailcow_net
-      ignore_errors: yes
-      changed_when: false
-
-    - name: Create mailcow-network (only if Mailcow not yet installed)
-      community.docker.docker_network:
-        name: mailcow-network
-        driver: bridge
-        driver_options:
-          com.docker.network.bridge.name: br-mailcow
-        enable_ipv6: yes
-        ipam_config:
-          - subnet: "{{ vault_mailcow_ipv4_network | default('172.22.1.0/24') }}"
-          - subnet: "{{ vault_mailcow_ipv6_network | default('fd4d:6169:6c63:6f77::/64') }}"
-        state: present
-      when: mailcow_net.rc != 0
+  roles:
+    - { role: docker, tags: docker }
+    - { role: networks, tags: docker }
