--- a/ansible/hardening.yml
+++ b/ansible/hardening.yml
@@ -1,6 +1,6 @@
 - hosts: ovh-server
   become: yes
-  tasks:
+  pre_tasks:
     - name: Update apt cache (same as 'sudo apt update')
       apt:
         update_cache: yes
