--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -9,3 +9,4 @@
     - { role: docker, tags: docker }
     - { role: networks, tags: docker }
     - { role: traefik, tags: services }
+    - { role: jenkins, tags: [services, jenkins] }
