updated jenkins configuration

--- a/ansible/roles/jenkins/files/docker-compose.yml
+++ b/ansible/roles/jenkins/files/docker-compose.yml
@@ -27,12 +27,16 @@ services:
       - DOCKER_TLS_VERIFY=1
       - JENKINS_OPTS=--httpPort=8080
       - JENKINS_URL=https://jenkins.joachimjasmin.com/
+      - JAVA_OPTS=-Djenkins.model.Jenkins.crumbIssuerProxyCompatibility=true -Dhudson.security.csrf.DefaultCrumbIssuer.EXCLUDE_SESSION_ID=true
     labels:
       - traefik.enable=true
       - traefik.http.routers.jenkins.rule=Host(`jenkins.joachimjasmin.com`)
       - traefik.http.routers.jenkins.entrypoints=websecure
       - traefik.http.routers.jenkins.tls.certresolver=letsencrypt
       - traefik.http.services.jenkins.loadbalancer.server.port=8080
+      - traefik.http.routers.jenkins.middlewares=jenkins-headers
+      - traefik.http.middlewares.jenkins-headers.headers.customrequestheaders.X-Forwarded-Proto=https
+      - traefik.http.middlewares.jenkins-headers.headers.customrequestheaders.X-Forwarded-Port=443
     volumes:
       - jenkins-data:/var/jenkins_home
       - jenkins-docker-certs:/certs/client:ro
