--- a/ansible/roles/traefik/files/docker-compose.yml
+++ b/ansible/roles/traefik/files/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "--api.insecure=false"
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
-      - "--providers.docker.network=odyssai-network"
+      - "--providers.docker.network=global-network"
       - "--entrypoints.web.address=:80"
       - "--entrypoints.websecure.address=:443"
       # Redirection HTTP -> HTTPS
