added monitoring role

--- a/ansible/setup.yml
+++ b/ansible/setup.yml
@@ -8,4 +8,4 @@
     - { role: fail2ban, tags: hardening }
     - { role: docker, tags: docker }
     - { role: networks, tags: docker }
-    - { role: traefik, tags: services }
+    - { role: monitoring, tags: monitoring }
