--- a/ansible/roles/monitoring/files/prometheus.yml
+++ b/ansible/roles/monitoring/files/prometheus.yml
@@ -15,3 +15,7 @@ scrape_configs:
     metrics_path: /metrics
     static_configs:
       - targets: ["grafana:3000"]
+
+  - job_name: traefik
+    static_configs:
+      - targets: ["traefik:8082"]
