--- a/ansible/roles/monitoring/tasks/main.yml
+++ b/ansible/roles/monitoring/tasks/main.yml
@@ -24,5 +24,5 @@
 
 - name: Run docker compose up
   ansible.builtin.command:
-    cmd: docker compose up -d
+    cmd: docker compose up -d --force-recreate
     chdir: /opt/monitoring
