--- a/ansible/roles/ipseis/tasks/main.yml
+++ b/ansible/roles/ipseis/tasks/main.yml
@@ -16,5 +16,5 @@
 
 - name: Run docker compose up
   ansible.builtin.command:
-    cmd: docker compose --profile dev --profile prod up -d
+    cmd: docker compose --profile dev --profile stg --profile prod up -d
     chdir: /opt/ipseis
