--- a/ansible/roles/monitoring/files/docker-compose.yml
+++ b/ansible/roles/monitoring/files/docker-compose.yml
@@ -62,6 +62,22 @@ services:
     networks:
       - global-network
 
+  cadvisor:
+    image: ghcr.io/google/cadvisor:0.55.1
+    container_name: cadvisor
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:ro
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
+      - /dev/disk/:/dev/disk:ro
+    privileged: true
+    devices:
+      - /dev/kmsg:/dev/kmsg
+    restart: unless-stopped
+    networks:
+      - global-network
+
 networks:
   global-network: { external: true }
 
