--- a/ansible/roles/monitoring/files/prometheus.yml
+++ b/ansible/roles/monitoring/files/prometheus.yml
@@ -19,3 +19,7 @@ scrape_configs:
   - job_name: traefik
     static_configs:
       - targets: ["traefik:8082"]
+
+  - job_name: cadvisor
+    static_configs:
+      - targets: ["cadvisor:8080"]
