--- a/ansible/roles/mongo/files/docker-compose.yml
+++ b/ansible/roles/mongo/files/docker-compose.yml
@@ -11,30 +11,33 @@ services:
     container_name: mongo-dev
     volumes:
       - mongo-dev-data:/data/db
-      - ./init-scripts:/docker-entrypoint-initdb.d:ro
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USER}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_DEV_ROOT_PASSWORD}
+    ports:
+      - "127.0.0.1:27017:27017"
 
   mongo-stg:
     <<: *mongo-base
     container_name: mongo-stg
     volumes:
       - mongo-stg-data:/data/db
-      - ./init-scripts:/docker-entrypoint-initdb.d:ro
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USER}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_STG_ROOT_PASSWORD}
+    ports:
+      - "127.0.0.1:27018:27017"
 
   mongo-prod:
     <<: *mongo-base
     container_name: mongo-prod
     volumes:
       - mongo-prod-data:/data/db
-      - ./init-scripts:/docker-entrypoint-initdb.d:ro
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USER}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PROD_ROOT_PASSWORD}
+    ports:
+      - "127.0.0.1:27019:27017"
 
 volumes:
   mongo-dev-data:
