restructuration complète ansible : templates jinja2, vault secrets, FQCN, handlers
- déplacé playbooks dans playbooks/ et inventory dans inventory/
- ajouté ansible.cfg, requirements.yml, site.yml
- extrait toutes les variables en dur dans group_vars/all/vars.yml
- migré secrets mongo/ipseis (.env) vers vault chiffré
- converti tous les fichiers statiques en templates jinja2
- ajouté defaults/, meta/, handlers/ pour chaque rôle
- créé rôle docker_login (remplace pre_tasks dupliqués)
- corrigé FQCN dans les rôles docker et fail2ban
- mis à jour Makefile (cd ansible, suppression flags redondants)

--- a/ansible/roles/fail2ban/tasks/main.yml
+++ b/ansible/roles/fail2ban/tasks/main.yml
@@ -1,10 +1,11 @@
+---
 - name: Install fail2ban
-  apt:
-    name: fail2ban
+  ansible.builtin.apt:
+    name: "{{ fail2ban_package }}"
     state: present
 
 - name: Ensure fail2ban is running
-  service:
+  ansible.builtin.service:
     name: fail2ban
     state: started
-    enabled: yes
+    enabled: true
