--- a/ansible/roles/docker/tasks/main.yml
+++ b/ansible/roles/docker/tasks/main.yml
@@ -1,37 +1,36 @@
+---
 - name: Check if Docker is installed
-  command: docker --version
+  ansible.builtin.command: docker --version
   register: docker_installed
-  ignore_errors: yes
+  ignore_errors: true
   changed_when: false
 
 - name: Check if Docker Compose is installed
-  command: docker compose version
+  ansible.builtin.command: docker compose version
   register: docker_compose_installed
-  ignore_errors: yes
+  ignore_errors: true
   changed_when: false
 
-# From : https://docs.docker.com/engine/install/debian/#install-using-the-convenience-script
-- name: Download Docker install script (because Docker not installed)
-  get_url:
-    url: https://get.docker.com
+- name: Download Docker install script
+  ansible.builtin.get_url:
+    url: "{{ docker_install_script_url }}"
     dest: /tmp/get-docker.sh
-    mode: '0755'
+    mode: "0755"
   when: docker_installed.rc != 0 or docker_compose_installed.rc != 0
 
-- name: Run Docker install script (because Docker not installed)
-  command: sh /tmp/get-docker.sh
+- name: Run Docker install script
+  ansible.builtin.command: sh /tmp/get-docker.sh
   when: docker_installed.rc != 0 or docker_compose_installed.rc != 0
 
-# From : https://docs.docker.com/engine/install/linux-postinstall/#manage-docker-as-a-non-root-user
-- name: Add user to docker group (because we don't want sudo)
-  user:
+- name: Add user to docker group
+  ansible.builtin.user:
     name: "{{ ansible_user }}"
     groups: docker
-    append: yes
+    append: true
   when: docker_installed.rc != 0 or docker_compose_installed.rc != 0
 
 - name: Ensure Docker is running
-  service:
+  ansible.builtin.service:
     name: docker
     state: started
-    enabled: yes
+    enabled: true
