--- a/ansible/roles/networks/tasks/main.yml
+++ b/ansible/roles/networks/tasks/main.yml
@@ -1,37 +1,15 @@
-- name: Create global-network
+---
+- name: Create Docker networks
   community.docker.docker_network:
-    name: global-network
+    name: "{{ item }}"
     driver: bridge
     state: present
-
-- name: Create jenkins-network
-  community.docker.docker_network:
-    name: jenkins-network
-    driver: bridge
-    state: present
-
-- name: Create odyssai-network
-  community.docker.docker_network:
-    name: odyssai-network
-    driver: bridge
-    state: present
-
-- name: Create ipseis-network
-  community.docker.docker_network:
-    name: ipseis-network
-    driver: bridge
-    state: present
-
-- name: Create llama-network
-  community.docker.docker_network:
-    name: llama-network
-    driver: bridge
-    state: present
+  loop: "{{ docker_networks }}"
 
 - name: Check if mailcow network exists
-  command: docker network inspect mailcowdockerized_mailcow-network
+  ansible.builtin.command: docker network inspect mailcowdockerized_mailcow-network
   register: mailcow_net
-  ignore_errors: yes
+  ignore_errors: true
   changed_when: false
 
 - name: Create mailcow-network (only if Mailcow not yet installed)
@@ -40,9 +18,9 @@
     driver: bridge
     driver_options:
       com.docker.network.bridge.name: br-mailcow
-    enable_ipv6: yes
+    enable_ipv6: true
     ipam_config:
-      - subnet: "{{ vault_mailcow_ipv4_network | default('172.22.1.0/24') }}"
-      - subnet: "{{ vault_mailcow_ipv6_network | default('fd4d:6169:6c63:6f77::/64') }}"
+      - subnet: "{{ mailcow_ipv4_network }}"
+      - subnet: "{{ mailcow_ipv6_network }}"
     state: present
   when: mailcow_net.rc != 0
