--- a/ansible/roles/portfolio/tasks/main.yml
+++ b/ansible/roles/portfolio/tasks/main.yml
@@ -1,16 +1,19 @@
+---
 - name: Create portfolio directory
   ansible.builtin.file:
-    path: /opt/portfolio
+    path: "{{ portfolio_deploy_path }}"
     state: directory
     mode: "0755"
 
-- name: Copy docker-compose.yml
-  ansible.builtin.copy:
-    src: docker-compose.yml
-    dest: /opt/portfolio/docker-compose.yml
+- name: Template docker-compose.yml
+  ansible.builtin.template:
+    src: docker-compose.yml.j2
+    dest: "{{ portfolio_deploy_path }}/docker-compose.yml"
     mode: "0644"
+  notify: Restart portfolio
 
-- name: Run docker compose up
+- name: Ensure portfolio is running
   ansible.builtin.command:
     cmd: docker compose up -d
-    chdir: /opt/portfolio
+    chdir: "{{ portfolio_deploy_path }}"
+  changed_when: false
