--- a/ansible/roles/traefik/tasks/main.yml
+++ b/ansible/roles/traefik/tasks/main.yml
@@ -1,26 +1,27 @@
+---
 - name: Create traefik directory
   ansible.builtin.file:
-    path: /opt/traefik
+    path: "{{ traefik_deploy_path }}"
     state: directory
     mode: "0755"
 
-- name: Copy docker-compose.yml
-  ansible.builtin.copy:
-    src: docker-compose.yml
-    dest: /opt/traefik/docker-compose.yml
+- name: Template docker-compose.yml
+  ansible.builtin.template:
+    src: docker-compose.yml.j2
+    dest: "{{ traefik_deploy_path }}/docker-compose.yml"
     mode: "0644"
+  notify: Restart traefik
 
 - name: Create acme.json (if missing)
-  ansible.builtin.command:
-    cmd: touch /opt/traefik/acme.json
-    creates: /opt/traefik/acme.json
-
-- name: Set acme.json permissions
   ansible.builtin.file:
-    path: /opt/traefik/acme.json
+    path: "{{ traefik_deploy_path }}/acme.json"
+    state: touch
     mode: "0600"
+    modification_time: preserve
+    access_time: preserve
 
-- name: Run docker compose up
+- name: Ensure traefik is running
   ansible.builtin.command:
     cmd: docker compose up -d
-    chdir: /opt/traefik
+    chdir: "{{ traefik_deploy_path }}"
+  changed_when: false
